# RPiChat

./: .gitignore  .ottotime  README.md
backend/: .env.example  README.md  deploy.sh  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  chats.py  deps.py  users.py  websocket.py
backend/app/core/: __init__.py  exceptions.py  orchestrator.py  security.py
backend/app/models/: __init__.py  chat.py  message.py  participant.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  message.py  user.py
backend/app/services/: __init__.py  auth.py  chat.py
client/: index.html
mobile/Chatastic/: DOCUMENTATION.md  settings.gradle.kts
mobile/Chatastic/app/: build.gradle.kts
mobile/Chatastic/app/src/androidTest/java/com/danieletoniolo/Chatastic/: ExampleInstrumentedTest.java
mobile/Chatastic/app/src/main/: AndroidManifest.xml
mobile/Chatastic/app/src/main/res/drawable/: bg_button_square.xml  bg_input_underline.xml  bg_message_me.xml  bg_message_other.xml  ic_chat.xml  ic_close.xml  ic_info.xml  ic_login.xml
mobile/Chatastic/app/src/main/res/layout/: activity_chat.xml  activity_chat_list.xml  activity_login.xml  activity_settings.xml  dialog_create_chat.xml  item_chat.xml  item_message.xml  layout_bottom_nav.xml
mobile/Chatastic/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/Chatastic/app/src/main/res/values-night/: themes.xml
mobile/Chatastic/gradle/: libs.versions.toml
mobile/Chatastic/gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
